--- a/no1351_1400/Cargo.toml
+++ b/no1351_1400/Cargo.toml
@@ -8,5 +8,9 @@ edition = "2021"
 [dependencies]
 
 [[bin]]
+name = "no1366"
+path = "src/no1366.rs"
+
+[[bin]]
 name = "no1380"
 path = "src/no1380.rs"
